# ozarks_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  config.json
assets/shaders/blit/: blitFrag.sc  blitProgram.json  blitVert.sc
assets/shaders/forward/: forwardFrag.sc  forwardVert.sc  renderProgram.json  varying.def.sc
assets/test/: testResource.json
assets/test/renderer/: testMeshResource.json  testModelResource.json
include/core/: GameObject.h
include/core/components/: ActorComponent.h  TestComponent.h
include/core/config/: CentralConfig.h
include/core/managers/: ComponentManager.h  GameObjectManager.h
include/core/platform/: RenderWindow.h
include/core/resources/: Resource.h  ResourceFactory.h  ResourceHandle.h  ResourceManager.h  ResourceManagerBridge.h  ResourceRefCounter.h
include/core/resources/test/: TestResource.h  TestResourceFactory.h
include/core/systems/: System.h
include/core/types/: Actor.h  GameObject.h
include/renderer/: RenderContext.h  Renderer.h  VertexLayout.h
include/renderer/bgfx/: BGFXRenderContext.h
include/renderer/components/: ModelComponent.h
include/renderer/forward/: ForwardRenderer.h
include/renderer/resources/: MeshResource.h  MeshResourceFactory.h  ModelResource.h  ModelResourceFactory.h  ProgramResource.h  ProgramResourceFactory.h  RenderResource.h
include/renderer/utils/: RenderUtils.h  ShaderUtils.h
include/runtime/scene/: GLTFSceneLoader.h
include/util/: ErrorTypes.h  Types.h
src/: main.cpp
src/core/: GameObject.cpp
src/core/components/: ActorComponent.cpp
src/core/config/: CentralConfig.cpp
src/core/managers/: ComponentManager.cpp  GameObjectManager.cpp
src/core/resources/: ResourceHandle.cpp  ResourceManager.cpp  ResourceRefCounter.cpp
src/core/types/: Actor.cpp  GameObject.cpp
src/renderer/components/: ModelComponent.cpp
src/renderer/forward/: ForwardRenderer.cpp
src/renderer/resources/: MeshResourceFactory.cpp  ModelResourceFactory.cpp  ProgramResourcefactory.cpp
src/renderer/utils/: RenderUtils.cpp  ShaderUtils.cpp
src/runtime/scene/: GLTFSceneLoader.cpp
